--- a/templates/Front/index.html.twig
+++ b/templates/Front/index.html.twig
@@ -8,13 +8,21 @@
 
   <img src="{{ asset('img/smartcity.png') }}" alt="" data-aos="fade-in">
 
-  <div class="container">
-    <h2 data-aos="fade-up" data-aos-delay="100" class="">E-City,<br> Bienvenue dans notre Smart City !</h2>
-    <p data-aos="fade-up" data-aos-delay="200">Explorez l'avenir urbain dès maintenant</p>
-    <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
-      <a href="courses.html" class="btn-get-started">Commencer</a>
+ <div class="container">
+  <div class="row align-items-center">
+    <div class="col-md-3 col-6"> <!-- Colonne pour le logo, utilise col-md-3 pour les écrans moyens et grands, col-6 pour les écrans plus petits -->
+      <img src="{{ asset('img/logo2.png') }}" class="img-fluid" alt="Logo" style="max-width: 200px;"> <!-- Ajout d'un style pour définir la largeur maximale du logo -->
+    </div>
+    <div class="col-md-9 col-6"> <!-- Colonne pour le texte, utilise col-md-9 pour les écrans moyens et grands, col-6 pour les écrans plus petits -->
+      <h2 data-aos="fade-up" data-aos-delay="100">E-City,<br> Bienvenue dans notre Smart City !</h2>
+      <p data-aos="fade-up" data-aos-delay="200">Explorez l'avenir urbain dès maintenant</p>
+      <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
+        <a href="courses.html" class="btn-get-started">Commencer</a>
+      </div>
     </div>
   </div>
+</div>
+
 </section><!-- /Section d'accueil -->
 {% endblock %}
 
