--- a/templates/Back/commande/index.html.twig
+++ b/templates/Back/commande/index.html.twig
@@ -10,7 +10,7 @@
             </div>
             <div class="col-md-6 d-flex justify-content-end"> 
     <div class="mt-4">
-        <a href="{{ path('app_article_new') }}" class="btn btn-success">
+        <a href="{{ path('app_article_index_back2') }}" class="btn btn-success">
             <i class="align-middle me-1" data-feather="plus-circle"></i> Ajouter un nouvel commande
         </a>
     </div>
