--- a/templates/Back/article/cart.html.twig
+++ b/templates/Back/article/cart.html.twig
@@ -6,7 +6,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="text-center mb-4">  Mon panier <i class="bi bi-cart4" style="color: #e80368; font-size: 40px;"></i><i class="fas fa-shopping-cart"></i></h1>
+                
+                <h1 class="text-center mb-4">  Mon panier <i class="align-middle" data-feather="shopping-bag" style="color: #e80368; font-size: 40px;"></i></h1>
             </div>
         </div>
 
@@ -34,7 +35,7 @@
                                     <td><span style="color: red; font-weight: bold;">{{ item.prixArticle }} DT</span></td>
                                     <td><span style="color: red; font-weight: bold;">{{ item.quantity * item.prixArticle }} DT</span></td>
                                     <td>
-                                        <a href="{{ path('remove_from_cart', {'id': item.id}) }}" ><i class="bi bi-trash" style="color: black; font-size: 25px;"></i></a>
+                                        <a href="{{ path('remove_from_cart_back', {'id': item.id}) }}" ><i class="align-middle" data-feather="trash-2" ></i></a>
                                     </td> <!-- Lien pour supprimer l'article -->
                                 </tr>
                             {% endfor %}
@@ -73,7 +74,7 @@
             </div>
              <div class="row">
                 <div class="col-md-12 text-center">
-                    <a href="{{ path('cart_checkout') }}" class="btn btn-success">Passer commande</a>
+                    <a href="{{ path('cart_checkout_back') }}" class="btn btn-success">Passer commande</a>
                 </div>
             </div>
         {% else %}
