--- a/templates/Back/article/edit.html.twig
+++ b/templates/Back/article/edit.html.twig
@@ -30,9 +30,9 @@
                                 {{ form_widget(form.typeArticle, {'attr': {'class': 'form-control'}}) }}
                                 {{ form_errors(form.typeArticle) }}
                             </div>
-                            <div class="form-group">
+                             <div class="form-group">
                                 {{ form_label(form.descriptionArticle, 'Description de l\'article', {'label_attr': {'class': 'form-label'}}) }}
-                                {{ form_widget(form.descriptionArticle, {'attr': {'class': 'form-control'}}) }}
+                                {{ form_widget(form.descriptionArticle, {'attr': {'class': 'form-control', 'rows': 5}}) }}
                                 {{ form_errors(form.descriptionArticle) }}
                             </div>
                             <div class="form-group">
