--- a/templates/Back/article/new.html.twig
+++ b/templates/Back/article/new.html.twig
@@ -32,9 +32,10 @@
                             </div>
                             <div class="form-group">
                                 {{ form_label(form.descriptionArticle, 'Description de l\'article', {'label_attr': {'class': 'form-label'}}) }}
-                                {{ form_widget(form.descriptionArticle, {'attr': {'class': 'form-control'}}) }}
+                                {{ form_widget(form.descriptionArticle, {'attr': {'class': 'form-control', 'rows': 5}}) }}
                                 {{ form_errors(form.descriptionArticle) }}
                             </div>
+
                             <div class="form-group">
                                 {% if form.photoArticle.vars.value %}
                                     <img src="{{ asset(form.photoArticle.vars.value) }}" alt="Image" style="max-width: 200px; max-height: 200px;">
