--- a/templates/Back/article/show.html.twig
+++ b/templates/Back/article/show.html.twig
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-10">
-                <h1 class="text-left mb-4">Article </h1>
+                <h1 class="text-left mb-4">Article :</h1>
                 <div class="row">
                     <div class="col-md-4 text-center">
                         <img src="{{ asset(article.photoArticle) }}" alt="{{ article.nomArticle }}" style="width: 300px; height: 300px;">
@@ -39,8 +39,7 @@
                             </tbody>
                         </table>
                         <div class="text-center">
-                            <a href="{{ path('article_add_to_cart', {'id': article.idArticle}) }}" class="btn btn-primary"><i class="bi bi-cart-plus"></i> Ajouter au panier</a>
-                            <a href="{{ path('app_article_index_back') }}" >Retour à la liste</a>
+                            <a href="{{ path('app_article_index_back') }}" class="btn btn-secondary btn-block mt-3">Retour à la liste</a>
                         </div>
                     </div>
                 </div>
