CRUD done + Control of input

--- a/templates/Back/medecin/showDoctors.html.twig
+++ b/templates/Back/medecin/showDoctors.html.twig
@@ -5,11 +5,14 @@
   <style>
     table {
         margin: 10px;
-        width: 30px; /* Adjust this value as needed */
+       
     } 
+    h1 {
+        margin-left: 20px;
+    }
 </style>
 
-    <table class="table table-striped table-middle-aligned table-borderless" style=" width: 70%;">
+    <table class="table table-striped table-middle-aligned table-borderless" >
         <thead>
             <tr>
                 <th scope="col">{{ 'Nom'|trans }}</th>
