--- a/templates/Front/base.html.twig
+++ b/templates/Front/base.html.twig
@@ -55,19 +55,10 @@
       </a>
       <nav id="navmenu" class="navmenu">
         <ul>
-
-          <li><a href="{{ path ('app_acceuil')}}" class="active">Acceuil</a></li>
-
-          <li class="dropdown has-dropdown" ><a href="#">Santé</a>
-            <ul>
-                  <li><a href="{{ path ('app_medecin_getAll')}}">Les Medecins</a></li>
-                  <li><a href="#">Les Rendez-Vous</a></li>
-            </ul>
-          </li>
-
           {% block menu %}
           <li><a href="index.html" class="active">Acceuil</a></li>
-          <li><a href="about.html">Santé</a></li>
+          <li class="dropdown has-dropdown" ><a href="{{ path ('front_rendezVous_getAll')}}" >Santé</a>
+          </li>
 
           <li><a href="courses.html">Shopping</a></li>
 
