--- a/templates/Front/basefront.html.twig
+++ b/templates/Front/basefront.html.twig
@@ -57,11 +57,7 @@
         <ul>
           <li><a href="{{ path ('app_acceuil')}}" class="active">Acceuil</a></li>
 
-          <li class="dropdown has-dropdown" ><a href="#">Santé</a>
-            <ul>
-                  <li><a href="{{ path ('app_medecin_getAll')}}">Les Medecins</a></li>
-                  <li><a href="#">Les Rendez-Vous</a></li>
-            </ul>
+          <li class="dropdown has-dropdown" ><a href="{{ path ('front_rendezVous_getAll')}}" >Santé</a>
           </li>
 
           <li><a href="courses.html">Shopping</a></li>
