--- a/templates/Back/rendezVous/showAllRvInOtherForm.html.twig
+++ b/templates/Back/rendezVous/showAllRvInOtherForm.html.twig
@@ -36,7 +36,8 @@
         .appointments-grid {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 20px;
+            gap: 7px;
+            margin: 7px;
         }
         .appointment-item {
             padding: 20px;
@@ -49,6 +50,9 @@
         }
         .appointment-actions {
             align-items: flex-end;
+        }
+        h1{
+            margin-left: 10px;
         }
     </style>
 {% endblock %}
