--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,7 +25,7 @@
   --default-color-rgb: 68, 68, 68;
   --heading-color: #37423b;
   --heading-color-rgb: 55, 66, 59;
-  --accent-color: #5fcf80;
+  --accent-color: #1000f3;
   --accent-color-rgb: 95, 207, 128;
   --contrast-color: #ffffff;
   --contrast-color-rgb: 255, 255, 255;
@@ -34,9 +34,9 @@
 /* Nav Menu Colors */
 :root {
   --nav-color: #272828;
-  --nav-hover-color: #5fcf80;
+  --nav-hover-color: #1000f3;
   --nav-dropdown-color: #272828;
-  --nav-dropdown-hover-color: #5fcf80;
+  --nav-dropdown-hover-color: #1000f3;
   --nav-dropdown-background-color: #ffffff;
 }
 
@@ -1965,6 +1965,6 @@ section,
 /*--------------------------------------------------------------
 # Starter Section Section
 --------------------------------------------------------------*/
-.starter-section {
-  /* Add your styles here */
-}
+/* .starter-section {
+  /* Add your styles here 
+} */
