--- a/public/parking/css/style.css
+++ b/public/parking/css/style.css
@@ -482,7 +482,7 @@
 /*** Footer Start ***/
 .footer .footer-item .btn-link {
     line-height: 35px;
-    color: rgba(255, 255, 255, .5);
+    color: rgba(255, 255, 255, 0.5);
     transition: 0.5s;
 }
 
