--- a/templates/Back/base.html.twig
+++ b/templates/Back/base.html.twig
@@ -18,6 +18,16 @@
 
 	<link href="{{asset('css/app.css')}}" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+	<!-- Bootstrap CSS (Replace with your Bootstrap version) -->
+	<link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+
+	<!-- Bootstrap Icons (Replace with your Bootstrap Icons version) -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.7.0/font/bootstrap-icons.min.css" rel="stylesheet">
+	
+	<!-- Font Awesome CSS (Replace with your Font Awesome version) -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+
 </head>
 
 <body>
